# IT6322A_server

./: .gitignore  README.md  pyproject.toml
it6322a_server/: SocketServer.py  config.py  main.py
tests/: test_it6322a_server.py
